ML Kit NEWS file

           **** ML Kit version 4.1.1 is released ****

 * mael 2002-08-25: Removed Posix support due to licensing problems 
   with code from mlton.

 * mael 2002-08-25: Removed region type real. Added region type 
   pair for implementation of almost tag-free garbage collection -
   not yet fully implemented.

           **** ML Kit version 4.1.0 is released ****

 * mael 2002-04-06: Manual improved -- the pdf-version of the manual
   now uses Type 1 fonts, exclusively.

 * mael 2001-12-16: Posix bug-fixes. Runtime system clean-up. 
   Change of prim-function for interfacing with C. It is easier 
   now to interface with C functions that take regions as 
   arguments; a few macros help generate different code when 
   profiling is enabled.

 * mael 2001-12-13: Ported Posix structure from MLton. Calls to C
   are in many cases simpler now because auto-conversion is 
   extended to work with a larger set of types, including 
   strings (and CharArrays).

 * mael 2001-11-25: Assembler in-lining of sub/update/size 
   operations on bytetables (CharArray, Word8Array, CharVector, 
   Word8Vector, String).

 * mael 2001-11-24: Better implementation of Array/Vector (constant
   subscripting/updating).

 * mael 2001-11-24: Better implementation of CharArray/Word8Array 
   (basislib/ByteTable.sml); no ref-indirection.

 * mael 2001-11-24: Better implementation of strings/arrays/vectors
   by supporting large objects in the runtime system; values that do
   not fit in region pages are now allocated with malloc and placed
   in a list of large objects in the region descriptor for the 
   region. Upon region de-allocation, the large objects are freed 
   using free.

 * mael 2001-11-20: Better reporting of garbage collection statistics
   and fragmentation (runtime flag -verbose_gc, when gc is enabled).

 * mael 2001-11-15: Unboxing of datatypes. Previously, only a certain
   set of predefined types were implemented unboxed. Now, enumerations