@@ -269,9 +269,9 @@ including Peter Bertelsen, Lars Birkedal, Martin Elsman, Niels
 Hallenberg, Tommy H\o jfeld Olesen, Nick Rothwell, Mads Tofte, David
 N.\@ Turner, and Peter Sestoft.
 
-People who have contributed with bug reports includes, but are not
-limited to (in alphabetical order) Johnny Andersen, Ken Friis Larsen,
-Daniel Wang, and Stephen Weeks.
+People who have contributed with bug reports and patches includes, but
+are not limited to (in alphabetical order) Johnny Andersen, Koshy A
+Joseph, Ken Friis Larsen, Daniel Wang, and Stephen Weeks.
 
 \section*{License}
 The ML Kit is released under the GNU General Public License.  
